--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 	<!--Links the css page to this.-->
-	<link rel = "stylesheet" href = "style.css">
+	<link rel = "stylesheet" href = "style.css"> <!-- 	<link rel = "stylesheet" href = "http://www.miketdick.com/style.css"> This to the left is for CSS on website -->
 	<!--This is for icons from font awesome.-->
 	<script src="https://kit.fontawesome.com/adca81fafe.js" crossorigin="anonymous"></script>
 	<!--Github Icon from Font Awesome.-->
@@ -27,8 +27,14 @@
 	<nav>
 		<!--Resume; This link is local.-->
 	<a href = "Resume.pdf" target ="_blank">Resume</a>
+	<!-- This link goes to school's website. Going to create another webpage for this. -->
+	<a href="https://umich.edu" target = "_blank">Projects</a>
+	<a href ="https://www.instagram.com/_mikedick_/" target = "_blank">Photography</a>
+	<!--Working with buttons.-->
+	<!-- <button onclick="window.open(document.location='Resume.pdf', '_blank'); return false;"> Resume </button> -->
 		<!--The hyperlinks to contant my personal email.-->
-	<a href="mailto:michaeldick000@gmail.com?subject=Contact">Email Me</a>
+	<a href="mailto:michaeldick000@gmail.com?subject=Contact">Contact Me</a>
+
 	</nav>
 </div>
 <div class = "bio">
